--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "@slack/bolt": "^3.12.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "openai": "^3.2.1"
-  },
-  "devDependencies": {
-    "@types/express": "^4.17.17",
+    "openai": "^3.2.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.5"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.17"
   }
 }
