--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "typescript": "^4.9.5"
   },
   "devDependencies": {
-    "@types/express": "^4.17.17"
+    "@types/express": "^4.17.17",
+    "@types/node": "^18.15.3"
+  },
+  "peerDependencies": {
+    "@types/node": "^18.15.3"
   }
 }
