--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@slack/bolt": "^3.12.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "node-fetch": "2",
     "openai": "^3.2.1",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
