--- a/package.json
+++ b/package.json
@@ -13,17 +13,20 @@
   "license": "ISC",
   "dependencies": {
     "@slack/bolt": "^3.12.2",
+    "async-lock": "^1.4.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "node-fetch": "2",
+    "node-fetch": "^2.6.9",
     "openai": "^3.2.1",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.5"
   },
   "devDependencies": {
+    "@types/async-lock": "^1.4.0",
     "@types/express": "^4.17.17",
-    "@types/node": "^18.15.3"
+    "@types/node": "^18.15.3",
+    "@types/node-fetch": "^2.6.2"
   },
   "peerDependencies": {
     "@types/node": "^18.15.3"
