--- a/package.json
+++ b/package.json
@@ -12,21 +12,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@slack/bolt": "^3.13.1",
+    "@slack/bolt": "^3.14.0",
     "async-lock": "^1.4.0",
-    "dotenv": "^16.1.4",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "node-fetch": "^2.6.11",
-    "openai": "^3.3.0",
+    "openai": "^4.16.1",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^4.9.5"
+    "typescript": "^5.2.2"
   },
   "devDependencies": {
-    "@types/async-lock": "^1.4.0",
-    "@types/express": "^4.17.17",
-    "@types/node": "^18.16.18",
-    "@types/node-fetch": "^2.6.4"
+    "@types/async-lock": "^1.4.2",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.8.10"
   },
   "peerDependencies": {
     "@types/node": "^18.15.3"
