--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "async-lock": "^1.4.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "node-fetch": "^3.3.2",
     "openai": "^4.16.1",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
