feat: add image processing capabilities for OpenAI integration
- Introduce image downloading, resizing, and encoding functions using axios and sharp
- Enhance chat completion functions to handle image files from Slack
- Update message processing logic to include image content in chat requests
- Refactor logger to improve error handling and logging details for image processing
- Add new types for Slack file handling

--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
   "dependencies": {
     "@slack/bolt": "^4.2.0",
     "async-lock": "^1.4.1",
+    "axios": "^1.9.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "node-fetch": "^3.3.2",
     "openai": "^4.82.0",
     "pino": "^9.6.0",
     "pino-pretty": "^13.0.0",
+    "sharp": "^0.34.1",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0"
   },
