--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@silvia-odwyer/photon-node": "^0.3.3",
     "@slack/bolt": "^4.2.0",
     "async-lock": "^1.4.1",
     "axios": "^1.9.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "jimp": "^1.6.0",
     "node-fetch": "^3.3.2",
     "openai": "^4.82.0",
     "pino": "^9.6.0",
